[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/tooltip_back.png" type="Texture" id=1]
[ext_resource path="res://Scripts/item_tooltip.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.6425, 13.7647 )

[node name="drop" type="StaticBody2D"]
input_pickable = true
script = ExtResource( 2 )

[node name="id" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="drop_sprite" type="Sprite" parent="."]

[node name="drop_coll" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="stats_tt" type="Popup" parent="."]
margin_right = 124.0
margin_bottom = 124.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stats" type="TextureRect" parent="stats_tt"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
texture = ExtResource( 1 )

[node name="item_name" type="Label" parent="stats_tt/stats"]
margin_top = 5.0
margin_right = 124.0
margin_bottom = 19.0
text = "NAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stats_container" type="VBoxContainer" parent="stats_tt/stats"]
margin_top = 30.0
margin_right = 124.0
margin_bottom = 124.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="str" type="Label" parent="stats_tt/stats/stats_container"]
margin_right = 124.0
margin_bottom = 14.0
text = "Str"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="value" type="Label" parent="stats_tt/stats/stats_container/str"]
margin_left = 40.0
margin_right = 80.0
margin_bottom = 14.0

[node name="dex" type="Label" parent="stats_tt/stats/stats_container"]
margin_top = 18.0
margin_right = 124.0
margin_bottom = 32.0
text = "Dex"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="value" type="Label" parent="stats_tt/stats/stats_container/dex"]
margin_left = 40.0
margin_right = 80.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="int" type="Label" parent="stats_tt/stats/stats_container"]
margin_top = 36.0
margin_right = 124.0
margin_bottom = 50.0
text = "Int"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="value" type="Label" parent="stats_tt/stats/stats_container/int"]
margin_left = 40.0
margin_right = 80.0
margin_bottom = 14.0

[node name="res" type="Label" parent="stats_tt/stats/stats_container"]
margin_top = 54.0
margin_right = 124.0
margin_bottom = 68.0
text = "Res"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="f" type="Label" parent="stats_tt/stats/stats_container/res"]
margin_left = 30.0
margin_right = 55.0
margin_bottom = 14.0
text = "f:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c" type="Label" parent="stats_tt/stats/stats_container/res"]
margin_left = 55.0
margin_right = 80.0
margin_bottom = 14.0
text = "c:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="l" type="Label" parent="stats_tt/stats/stats_container/res"]
margin_left = 85.0
margin_right = 110.0
margin_bottom = 14.0
text = "l:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ph" type="Label" parent="stats_tt/stats/stats_container/res"]
margin_left = 30.0
margin_top = 14.0
margin_right = 70.0
margin_bottom = 28.0
text = "ph:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="po" type="Label" parent="stats_tt/stats/stats_container/res"]
margin_left = 80.0
margin_top = 14.0
margin_right = 120.0
margin_bottom = 28.0
text = "po:"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_drop_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_drop_mouse_exited"]
